--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+main {
   min-height: 100vh;
+
+  display: grid;
+  place-content: center;
+  font-family: "Raleway", sans-serif;
+
+  font-size: 1.4rem;
+}
+
+#quote-box {
+  /* text-align: center; */
+  text-transform: lowercase;
+  background-color: white;
+  padding: 2em;
+  line-height: 1.5;
+  max-width: 30rem;
+  min-width: 30rem;
+
+  border-radius: 0.6rem;
+}
+
+#text {
+  display: block;
+  margin-bottom: 1rem;
+  font-size: 1.4rem;
+
+  transition: all 350ms ease-in-out;
+}
+
+#text i {
+  padding-right: 0.5rem;
+}
+
+#author {
+  display: block;
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-align: right;
+}
+
+.buttons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin-top: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+#new-quote {
+  outline: none;
+  border: 1px solid transparent;
+  border-radius: 0.3rem;
+  padding: 0.5em 1em;
+  cursor: pointer;
+
+  transition: all 350ms ease-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#new-quote:hover,
+#new-quote:focus {
+  opacity: 0.5 !important;
 }
